Mon Apr 11 11:27:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/config-g++-common.h:
          Defined ACE_LACKS_MEMBER_TEMPLATES for GCC < 3.0 as a solution for recent
          template compile errors from TypeCode refactoring.

Mon Apr 11 11:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Refcounted_Auto_Ptr.h:
          Removed explicit for the constructor which I added recently. I causes
          problems for user apps that use the implicit conversion. This class
          has more problems which need to be resolved.

Mon Apr 11 09:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/netinet/os_in.h:
          Define IP_MULTICAST_LOOP when it is not defined yet. Fixes problems
          with Pharlab.

Mon Apr 11 09:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_netdb.cpp (getmacaddress):
          Added Pharlab support

Mon Apr 11 00:00:42 2005  Boris Kolpackov  <boris@kolpackov.net>

	* ace/CDR_Size.cpp:

	  Removed unnecessary return statement.

Sun Apr 10 15:36:58 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tests/Memcpy_Test.cpp:

          Fixed wrong include file to fix compilation errors on Windows
          box.

Sun Apr 10 15:05:35 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tests/tests.mpc:
        * tests/Memcpy_Test.cpp:

          Changed the name of the test to ensure that it is same as the
          log file created.

Sun Apr 10 13:25:26 2005  Boris Kolpackov  <boris@kolpackov.net>

	* ace/CDR_Size.h:
	* ace/CDR_Size.cpp:
	* ace/CDR_Size.inl:

	  Added new ACE_SizeCDR. It is a CDR stream similar to
	  ACE_OutputCDR but instead of serializing anything
	  ACE_SizeCDR calculates the size of the resulting
	  representation.

	* ace/ace.mpc:
	* ace/Makefile.am:

	  Added new files.

	* tests/CDR_Test.cpp:

	  Added test for ACE_SizeCDR.

	* protocols/ace/RMCast/Link.cpp:
	* protocols/ace/RMCast/Protocol.h:
